--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "sxsw-blog",
   "private": true,
   "scripts": {
     "build": "nuxt build",
@@ -19,8 +19,13 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
+    "@iconify-json/ri": "^1.1.9",
+    "@nuxt/content": "^2.6.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@types/node": "^18",
+    "@unocss/nuxt": "^0.53.1",
+    "@vueuse/core": "^10.1.2",
+    "@vueuse/nuxt": "^10.1.2",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -28,8 +33,14 @@
     "lint-staged": "^13.2.2",
     "nuxt": "^3.5.2",
     "postcss-html": "^1.5.0",
+    "postcss-preset-env": "^8.4.2",
     "prettier": "^2.8.8",
     "stylelint": "^15.6.3",
     "stylelint-config-standard-vue": "^1.0.0"
+  },
+  "dependencies": {
+    "@unocss/reset": "^0.53.1",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43"
   }
 }
