--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@commitlint/config-conventional": "^17.6.5",
     "@iconify-json/ri": "^1.1.9",
     "@nuxt/content": "^2.6.0",
+    "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@types/node": "^18",
     "@unocss/nuxt": "^0.53.1",
